--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fsevents",
+  "name": "fsevents-bin",
   "version": "0.2.1",
-  "description": "Native Access to Mac OS-X FSEvents",
+  "description": "Precompiled Native Access to Mac OS-X FSEvents",
   "main": "fsevents.js",
   "dependencies": {
     "nan": "~0.8.0"
@@ -13,12 +13,11 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "install": "node-gyp rebuild",
     "test": "export PATH=$PATH:`pwd`/node_nodules/.bin/ && tap ./test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pipobscure/fsevents.git"
+    "url": "https://github.com/mauritslamers/fsevents-bin.git"
   },
   "keywords": [
     "fsevents",
